--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -1,12 +1,13 @@
 <%- include('partials/header') -%>
-<form class="centered-form" action="/entries/editUser/<%= user._id %>?_method=PUT" enctype="multipart/form-data" method="POST">
+<h2 class="mt-5">Edit User</h2>
+<form class="centered-form" action="/entries/editUser/<%= loggedInUser._id %>?_method=PUT" enctype="multipart/form-data" method="POST">
   <div class="formRow">
     <p>
-      <img src="<%= user.image %>" alt="current user image" class="avatar rounded-circle mb-2"> 
+      <img src="<%= loggedInUser.image %>" alt="current user image" class="avatar rounded-circle mb-2"> 
       </p>
-      <p><strong>Username:</strong> <%= user.userName %></p>
+      <p><strong>Username:</strong> <%= loggedInUser.userName %></p>
     <label for="about" class="form-label"><strong>About Me</strong></label><br>
-    <textarea id="about" class="form-control" name="about" rows="10"><%=user.about%></textarea>
+    <textarea id="about" class="form-control" name="about" rows="10"><%=loggedInUser.about%></textarea>
   </div>
   <div class="formRow">
     <label for="cloudinaryId" class="form-label"><strong>Change User Image</strong></label><br>
