--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </main>
 </div>
 <div class="mt-5"></div>
-<footer class="bg-light text-dark text-center py-3 mt-auto">
+<footer class="text-center py-3 mt-auto container">
   <div class="text-center mt-3 ">
     <small><a href="https://heidifryzell.com"><i class="fa-solid fa-terminal"></i></a>
       <a href="https://heidifryzell.com" class="text-decoration-none">heidifryzell.com</a> &copy;<span id="year"></span>
