--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,22 +53,24 @@
   </head>
   <body class="d-flex flex-column min-vh-100"></body>
   <div class="container">
+
     <nav class="row">
-    <h1 class="mt-3 col-6"><a href="/"><i class="fa-solid fa-book"></i>
-      bird journal</a></h1>
-    <div class="col-6 d-flex justify-content-end align-items-center mt-3">
-    <% if (!isAuthenticated) { %>
-      <div><a href="/login" class="text-decoration-none  me-3"> login</a>&nbsp;</div>
-      <div><a href="/signup" class="text-decoration-none"> signup</a></div>
-      <% } %>
-      <% if (isAuthenticated) { %>
-      <a href="/entries/allUser/<%= loggedInUser._id %>" class="text-decoration-none me-3">my entries</a>&nbsp;
-      <a href="/users" class="text-decoration-none me-3">all journalers </a>&nbsp;
-      <a href="/entries/addEntry" class="text-decoration-none  me-3">add entry </a>&nbsp;
-      <a href="/logout" class="text-decoration-none"> logout</a>
-      <a href="/entries/user/<%= loggedInUser._id %>"><img class="nav-avatar" src="<%= loggedInUser.image %>" alt="<%= loggedInUser.userName %>"></a>
-      <% } %>
-    </div>
-  </nav>
+      <h1 class="mt-3 col-12 col-lg-6 logo-text"><a href="/"><i class="fa-solid fa-book"></i>
+        bird journal</a></h1>
+      <div class="col-12 col-lg-6 d-flex flex-column flex-md-row justify-content-end align-items-center mt-3">
+      <% if (!isAuthenticated) { %>
+        <div><a href="/login" class="text-decoration-none  me-3"> login</a>&nbsp;</div>
+        <div><a href="/signup" class="text-decoration-none"> signup</a></div>
+        <% } %>
+        <% if (isAuthenticated) { %>
+        <a href="/entries/allUser/<%= loggedInUser._id %>" class="text-decoration-none me-3">my entries</a>&nbsp;
+        <a href="/users" class="text-decoration-none me-3">all journalers </a>&nbsp;
+        <a href="/entries/addEntry" class="text-decoration-none  me-3">add entry </a>&nbsp;
+        <a href="/logout" class="text-decoration-none"> logout</a>
+        <a href="/entries/user/<%= loggedInUser._id %>"><img class="nav-avatar" src="<%= loggedInUser.image %>" alt="<%= loggedInUser.userName %>"></a>
+        <% } %>
+      </div>
+    </nav>
+
   <main class="flex-grow-1"></main>
     
