active state working in nav

--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
 <body class="container">
-  <h2 class="mt-5">All Birders</h2>
+  <h2 class="mt-5">journalers</h2>
   <div class="entriesList">
     <% for(let i = 0; i < users.length; i++) { %>
     <div>
