--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,6 +129,11 @@ img.thumbnail {
   }
 }
 
+.active {
+  font-weight: 700;
+  // color: rgb(71, 71, 71);
+}
+
 /* footer styles */
 
 footer p, footer small {
