--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,9 +10,9 @@
         <% }) %>    
     <% } %>
     <form class="centered-form" action="/login" method="POST">
-        <h2>Login</h2>
+        <h2 class="mb-4">login</h2>
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
-        <input type="submit" class="btn btn-success">
+        <input type="submit" class="btn btn-primary mt-2">
     </form>
 <%- include('partials/footer') -%>
