--- a/views/editEntry.ejs
+++ b/views/editEntry.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') -%>
 <form class="centered-form" action="/entries/editEntry/<%= entry._id %>?_method=PUT" method="POST">
+  <h2 class="mb-4">edit entry</h2>
   <div class="formRow">
     <label for="date" class="form-label">Date</label><br>
     <input type="date" class="form-control" name="date" id="date" value="<%= entry.date %>">
@@ -24,7 +25,7 @@
     <label for="reference" class="form-label">Reference URL</label><br>
     <input type="url" class="form-control" name="reference" id="reference" value="<%= entry.reference %>">
   </div>
-  <input type="submit" class="btn btn-success">
+  <input type="submit" class="btn btn-primary mt-2">
 </form>
 <script src="../js/form.js"></script>
 <%- include('partials/footer') -%>
