--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
-<h2 class="mt-5">Edit User</h2>
 <form class="centered-form" action="/entries/editUser/<%= loggedInUser._id %>?_method=PUT" enctype="multipart/form-data" method="POST">
+  <h2 class="mb-4">edit user</h2>
   <div class="formRow">
     <p>
       <img src="<%= loggedInUser.image %>" alt="current user image" class="avatar rounded-circle mb-2"> 
@@ -13,6 +13,6 @@
     <label for="cloudinaryId" class="form-label"><strong>Change User Image</strong></label><br>
     <input type="file" class="form-control" name="file" id="cloudinaryId">
   </div>
-  <input type="submit" class="btn btn-success">
+  <input type="submit" class="btn btn-primary mt-2">
 </form>
 <%- include('partials/footer') -%>
