--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header') -%>
-<h2 class="mt-5">Add Entry</h2>
 <form class="centered-form" action="/entries/addEntry" enctype="multipart/form-data" method="POST">
+  <h2 class="mb-4">add entry</h2>
   <div class="formRow">
     <label for="date" class="form-label">Date</label><br>
     <input type="date" class="form-control" name="date" id="date">
@@ -25,7 +25,7 @@
     <label for="reference" class="form-label">Reference URL</label><br>
     <input type="url" class="form-control" name="reference" id="reference">
   </div>
-  <input type="submit" class="btn btn-success">
+  <input type="submit" class="btn btn-primary mt-2">
 </form>
 <script src="../js/form.js"></script>
 <%- include('partials/footer') -%>
