--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -5,11 +5,11 @@
         <% }) %>    
     <% } %>
     <form class="centered-form" action="/signup" method="POST">
-        <h2>Sign Up</h2>
+        <h2 class="mb-4">sign up</h2>
         <input type="text" name="userName" placeholder="User Name">
         <input type="email" name="email" placeholder="Email">
         <input type="password" name="password" placeholder="Password">
         <input type="password" name="confirmPassword" placeholder="Confirm Password">
-        <input type="submit" class="btn btn-success">
+        <input type="submit" class="btn btn-primary mt-2">
     </form>
 <%- include('partials/footer') -%>
