fixed issues for users with less than 3 entries and incorrect redirects

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -63,8 +63,8 @@
         <div><a href="/signup" class="text-decoration-none"> sign up</a></div>
         <% } %>
         <% if (isAuthenticated) { %>
-        <a href="/entries/allUser/<%= loggedInUser._id %>" class="text-decoration-none me-md-3 <% if (view === "allUserEntries"  && entries[0].userId._id.toString() === loggedInUser._id.toString()) { %> active <% } %>">my journal</a>&nbsp;
-        <a href="/users" class="text-decoration-none me-md-3 <% if (view === "allUsers") { %> active <% } %>">journalers </a>&nbsp;
+        <a href="/entries/allUser/<%= loggedInUser._id %>" class="text-decoration-none me-md-3 <% if (view === "allUserEntries" && loggedInUser._id.toString() === requestedUser.toString()) { %> active <% } %>">my journal</a>&nbsp;
+        <a href="/users" class="text-decoration-none me-md-3 <% if (view === "getUsers") { %> active <% } %>">journalers </a>&nbsp;
         <a href="/entries/addEntry" class="text-decoration-none  me-md-3 <% if (view === "getEntryForm") { %> active <% } %>">add entry </a>&nbsp;
         <a href="/logout" class="text-decoration-none"> logout</a>
         <a href="/entries/user/<%= loggedInUser._id %>"><img class="nav-avatar" src="<%= loggedInUser.image %>" alt="<%= loggedInUser.userName %>"></a>
@@ -73,4 +73,5 @@
     </nav>
 
   <main class="flex-grow-1"></main>
+
     
