--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -7,23 +7,23 @@
   </div>
   <div class="formRow">
     <label for="commonName" class="form-label">Common Name</label><br>
-    <input type="text" class="form-control" name="commonName" placeholder= "American Robin" id="commonName">
+    <input type="text" class="form-control" name="commonName" placeholder= "American Robin" id="commonName" required>
   </div>
   <div class="formRow">
     <label for="latinName" class="form-label">Latin Name</label><br>
-    <input type="text" class="form-control" name="latinName" placeholder= "Turdus migratorius" id="latinName">
+    <input type="text" class="form-control" name="latinName" placeholder= "Turdus migratorius" id="latinName" required>
   </div>
   <div class="formRow">
     <label for="observations" class="form-label">Observations</label><br>
-    <textarea id="observations" class="form-control" name="observations" placeholder="This is what I saw..." rows="10"></textarea>
+    <textarea id="observations" class="form-control" name="observations" placeholder="This is what I saw..." rows="10" required></textarea>
   </div>
   <div class="formRow">
     <label for="image" class="form-label">Image</label><br>
-    <input type="file" class="form-control" name="file" id="image">
+    <input type="file" class="form-control" name="file" id="image" required>
   </div>
   <div class="formRow">
     <label for="reference" class="form-label">Reference URL</label><br>
-    <input type="url" class="form-control" name="reference" id="reference">
+    <input type="url" class="form-control" name="reference" id="reference" required>
   </div>
   <input type="submit" class="btn btn-primary mt-2">
 </form>
