add sign up instruction to home page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,8 @@
     <div class="row g-5">
       <div class="col-md-8">
           <h2>Welcome</h2>
-          <p>Discover the world of birds like never before with our innovative web application! Designed for bird enthusiasts and photographers alike, our platform allows you to upload stunning images of the birds you've encountered and learn fascinating details about each species. Dive into a vibrant community of like-minded users by exploring their shared uploads, engaging with their posts, and leaving likes on your favorite captures. Whether you're a seasoned ornithologist or a casual nature lover, this app is your gateway to connecting with others, sharing your passion for birdwatching, and expanding your knowledge about the incredible avian world.</p>
-          <p><small class="text-body-secondary">Special thanks to the <a href="https://documenter.getpostman.com/view/664302/S1ENwy59#intro" target="_blank">eBird API</a>.</small></p>
+          <p>Discover the world of birds like never before with our innovative web application! Designed for bird enthusiasts and photographers alike, our platform allows you to upload stunning images of the birds you've encountered and learn fascinating details about each species. Dive into a vibrant community of like-minded users by exploring their shared uploads, engaging with their posts, and leaving likes on your favorite captures. Whether you're a seasoned ornithologist or a casual nature lover, this app is your gateway to connecting with others, sharing your passion for birdwatching, and expanding your knowledge about the incredible avian world.<strong>Sign up and login to get started!</strong></p>
+          <!-- <p><small class="text-body-secondary">Special thanks to the <a href="https://documenter.getpostman.com/view/664302/S1ENwy59#intro" target="_blank">eBird API</a>.</small></p> -->
       </div>
       <div class="col-md-4">
         <img src="/images/crow.png" class="img-fluid rounded-start mt-4" alt="crow silhouette">
