--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -58,10 +58,10 @@
       <h1 class="mt-3 col-12 col-lg-6 logo-text"><a href="/"><i class="fa-solid fa-book"></i>
         bird journal</a></h1>
       <div class="col-12 col-lg-6 d-flex flex-column flex-md-row justify-content-end align-items-center mt-3">
-      <% if (!isAuthenticated) { %>
+      <!-- <% if (!isAuthenticated) { %>
         <div><a href="/login" class="text-decoration-none  me-md-3"> login</a>&nbsp;</div>
         <div><a href="/signup" class="text-decoration-none"> sign up</a></div>
-        <% } %>
+        <% } %> -->
         <% if (isAuthenticated) { %>
         <a href="/entries/allUser/<%= loggedInUser._id %>" class="text-decoration-none me-md-3 <% if (view === "allUserEntries" && loggedInUser._id.toString() === requestedUser.toString()) { %> active <% } %>">my journal</a>&nbsp;
         <a href="/users" class="text-decoration-none me-md-3 <% if (view === "getUsers") { %> active <% } %>">journalers </a>&nbsp;
