show profile avatars on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,11 +20,12 @@
   <% } %>
     <div class="entriesList">
         <% for(let i = 0; i < entries.length; i++) { %>
-          <div data-id="<%= entries[i]._id %>">
+          <div data-id="<%= entries[i]._id %>" class="listing">
             <a href="/entries/<%= entries[i]._id %>"><img class="thumbnail" src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
             <p><strong><%= entries[i].commonName %></strong>
               <br>
               <small><%= entries[i].date %></small></p>
+              <img src="<%= entries[i].userId.image %>" width="50px" class="listing-avatar" alt="<%= entries[i].userId.userName %>"></p>
             <!-- <div class="mb-2"><%= entries[i].likes %> 
               <form class="d-inline" action="/entries/likeEntry/<%= entries[i]._id %>?_method=PUT" method="POST">
                 <button class="fa fa-thumbs-up" type="submit"></button>
