--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -144,6 +144,22 @@ img.thumbnail {
   object-fit: cover;
 }
 
+.listing {
+  position: relative;
+}
+
+.listing-avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 1px solid rgba(0, 0, 0, 0.142);
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  background: #fff;
+}
+
 .nav-avatar {
   width: 50px;
   height: 50px;
