--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -11,11 +11,11 @@
   </div>
   <div class="formRow">
     <label for="latinName" class="form-label">Latin Name</label><br>
-    <input type="text" class="form-control" name="latinName" placeholder= "Turdus migratorius" id="latinName" required>
+    <input type="text" class="form-control" name="latinName" placeholder= "Turdus migratorius" id="latinName">
   </div>
   <div class="formRow">
     <label for="observations" class="form-label">Observations</label><br>
-    <textarea id="observations" class="form-control" name="observations" placeholder="This is what I saw..." rows="10" required></textarea>
+    <textarea id="observations" class="form-control" name="observations" placeholder="This is what I saw..." rows="10"></textarea>
   </div>
   <div class="formRow">
     <label for="image" class="form-label">Image</label><br>
@@ -23,7 +23,7 @@
   </div>
   <div class="formRow">
     <label for="reference" class="form-label">Reference URL</label><br>
-    <input type="url" class="form-control" name="reference" id="reference" required>
+    <input type="url" class="form-control" name="reference" id="reference">
   </div>
   <input type="submit" class="btn btn-primary mt-2">
 </form>
