--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -22,8 +22,8 @@
     <input type="file" class="form-control" name="file" id="image" required>
   </div>
   <div class="formRow">
-    <label for="reference" class="form-label">Reference URL</label><br>
-    <input type="url" class="form-control" name="reference" id="reference">
+    <!-- <label for="reference" class="form-label">Reference URL</label><br> -->
+    <input type="hidden" class="form-control" name="reference" id="reference">
   </div>
   <input type="submit" class="btn btn-primary mt-2">
 </form>
