responses are returning from Gemini AI

--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -11,6 +11,7 @@
     <input type="file" class="form-control" name="file" id="image" required>
     <button id="aiButton" class="btn btn-outline-primary">Get AI Suggestions</button>
   </div>
+  <div id="suggestions" class="formRow"></div>
   <div class="formRow">
     <label for="commonName" class="form-label">Common Name</label><br>
     <input type="text" class="form-control" name="commonName" placeholder= "American Robin" id="commonName" required>
