entry form populating from Gemini and adds fun fact

--- a/views/editEntry.ejs
+++ b/views/editEntry.ejs
@@ -17,6 +17,10 @@
     <label for="observations" class="form-label">Observations</label><br>
     <textarea id="observations" class="form-control" name="observations" rows="10"><%= entry.observations %></textarea>
   </div>
+  <div class="formRow">
+    <label for="funFact" class="form-label">Fun Facts</label><br>
+    <textarea id="funFact" class="form-control" name="funFact" placeholder="A fun thing about this bird..." rows="10"><%= entry.funFact %></textarea>
+  </div>
   <!-- <div class="formRow">
     <label for="image" class="form-label">Image</label><br>
     <input type="file" class="form-control" name="file" id="image">
