--- a/views/entry.ejs
+++ b/views/entry.ejs
@@ -20,6 +20,7 @@
   <div class="mb-4 mt-5 text-center"><img class="w-75" src="/images/crow.png" alt="outline of crow"></div>
   <p><strong>Common Name:</strong> <%= entry.commonName %></p>
   <p><strong>Latin Name:</strong> <%= entry.latinName %></p>
+  <p><strong>Fun Fact:</strong> <%= entry.funFact %></p>
   <p class="text-center mt-5"><a href="<%= entry.reference %>" target="_blank" class="btn btn-primary">Learn More</a></p>
 </div>
 </div>
