--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -25,6 +25,10 @@
     <textarea id="observations" class="form-control" name="observations" placeholder="This is what I saw..." rows="10"></textarea>
   </div>
   <div class="formRow">
+    <label for="funFact" class="form-label">Fun Facts</label><br>
+    <textarea id="funFact" class="form-control" name="funFact" placeholder="A fun thing about this bird..." rows="10"></textarea>
+  </div>
+  <div class="formRow">
     <!-- <label for="reference" class="form-label">Reference URL</label><br> -->
     <input type="hidden" class="form-control" name="reference" id="reference">
   </div>
