ability to preview profile photo pre-upload

--- a/views/editEntry.ejs
+++ b/views/editEntry.ejs
@@ -31,5 +31,5 @@
   </div>
   <input type="submit" class="btn btn-primary mt-2">
 </form>
-<script src="../js/form.js"></script>
+<!-- <script src="/js/entryForm.js"></script> -->
 <%- include('partials/footer') -%>
