--- a/views/entryForm.ejs
+++ b/views/entryForm.ejs
@@ -34,6 +34,5 @@
   </div>
   <input type="submit" class="btn btn-primary mt-2">
 </form>
-<div id="suggestions"></div>
-<script src="../js/form.js"></script>
+<script src="../js/entryForm.js"></script>
 <%- include('partials/footer') -%>
