add favicon and update README

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
       
       <div class="col-md-8">
           <h2>Welcome</h2>
-          <p>Discover the world of birds like never before with our innovative web application! Designed for bird enthusiasts and photographers alike, our platform allows you to upload stunning images of the birds you've encountered and learn fascinating details about each species. Dive into a vibrant community of like-minded users by exploring their shared uploads, engaging with their posts, and leaving likes on your favorite captures. Whether you're a seasoned ornithologist or a casual nature lover, this app is your gateway to connecting with others, sharing your passion for birdwatching, and expanding your knowledge about the incredible avian world.</p>
+          <p>Discover the world of birds! Designed for bird enthusiasts and photographers alike, our platform allows you to upload images of the birds you've encountered and get help identifying them with AI. Whether you're a seasoned ornithologist or a casual nature lover, this app is your gateway to sharing your passion for birdwatching.</p>
   
             <div><a href="/login" class="btn btn-primary btn-lg"> log in</a>&nbsp;<a href="/signup" class="btn btn-outline-primary btn-lg"> sign up</a></div>
             
