--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,6 +36,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png" />
     <script
   async
   src="https://www.googletagmanager.com/gtag/js?id=G-SF8R56H54Q"
