--- a/views/editEntry.ejs
+++ b/views/editEntry.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/header') -%>
 <form class="centered-form" action="/entries/editEntry/<%= entry._id %>?_method=PUT" method="POST">
   <h2 class="mb-4">edit entry</h2>
+  <div class="row">
+    <div class="col-md-6">
   <div class="formRow">
     <label for="date" class="form-label">Date</label><br>
     <input type="date" class="form-control" name="date" id="date" value="<%= entry.date %>">
@@ -13,6 +15,8 @@
     <label for="latinName" class="form-label">Latin Name</label><br>
     <input type="text" class="form-control" name="latinName" value="<%= entry.latinName %>" id="latinName">
   </div>
+  </div>
+  <div class="col-md-6">
   <div class="formRow">
     <label for="observations" class="form-label">Observations</label><br>
     <textarea id="observations" class="form-control" name="observations" rows="10"><%= entry.observations %></textarea>
@@ -25,6 +29,8 @@
     <label for="image" class="form-label">Image</label><br>
     <input type="file" class="form-control" name="file" id="image">
   </div> -->
+  </div>
+  </div>
   <div class="formRow">
     <label for="reference" class="form-label">Reference URL</label><br>
     <input type="url" class="form-control" name="reference" id="reference" value="<%= entry.reference %>">
