--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,16 +44,9 @@ button {
 /* form styles */
 
 form {
-  // display: flex;
-  // flex-direction: column;
-  // width: fit-content;
   input {
     margin-bottom: 0.5rem;
   }
-  // input[type="submit"] {
-  //   display:flex;
-  //   justify-content: flex-end;
-  // }
 }
 
 .centered-form {
@@ -157,6 +150,7 @@ img.thumbnail {
 
 .listing {
   position: relative;
+  max-width: 200px;
 }
 
 .listing-avatar {
@@ -203,7 +197,6 @@ img.thumbnail {
 
 .active {
   font-weight: 700;
-  // color: rgb(71, 71, 71);
 }
 
 /* footer styles */
