--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,12 @@
     <div class="entriesList">
         <% for(let i = 0; i < entries.length; i++) { %>
           <div data-id="<%= entries[i]._id %>" class="listing">
-            <a href="/entries/<%= entries[i]._id %>"><img class="thumbnail" src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
+            <% if (loggedInUser) { %>
+            <a href="/entries/<%= entries[i]._id %>">
+            <% } else { %>
+              <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal">
+            <% } %>
+            <img class="thumbnail" src="<%= entries[i].image %>" alt="<%= entries[i].commonName %>"></a>
             <p><strong><%= entries[i].commonName %></strong>
               <br>
               <small><%= entries[i].date %></small></p>
@@ -34,5 +39,23 @@
           </div>
           <%  } %>
         </div>
+        <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="loginModalLabel">Login Required</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                You must be logged in to access this page.
+              </div>
+              <div class="modal-footer">
+                <a href="/login" class="btn btn-primary">Login</a>
+                <a href="/signup" class="btn btn-outline-primary">Sign Up</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
 </body>
 <%- include('partials/footer') -%>
